Fix(TitleInput, ImgBtn) : Fixed the error now visible of title input, img upload btn on dark mode.

--- a/client/pc/src/app/write/page.module.scss
+++ b/client/pc/src/app/write/page.module.scss
@@ -14,20 +14,35 @@
     width: 100%;
     height: 5vh;
     justify-content: space-between;
+    align-items: center;
     margin: 2rem 0;
+    padding: 0 2rem;
 
     .mainImgUploadBtn {
-      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: white;
       position: relative;
+      width: 2.5rem;
+      height: 2rem;
 
-      img {
-        transform: scale(0.7);
+      &.dark {
+        width: 3rem;
+        height: 2rem;
       }
+    }
+
+    .publish {
     }
 
     .inputTitle {
       flex: 12;
       font-size: 2.4rem;
+      height: 100%;
+      padding: 1rem;
+      border: none;
+      outline: none;
     }
   }
 }
